crates/pgls_pretty_print/tests/snapshots/multi/tests__ordered_set_filter_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/ordered_set_filter.sql
snapshot_kind: text
---
SELECT
  percentile_disc(
    0.5
  )
  WITHIN GROUP (ORDER BY score)
  FILTER (WHERE
    score > 0)
FROM
  (VALUES
    (1),
    (2),
    (3))
  AS scores (score);

SELECT
  percentile_cont(
    0.9
  )
  WITHIN GROUP (ORDER BY duration)
  FILTER (WHERE
    duration IS NOT NULL)
FROM
  (VALUES
    (CAST('1 hour' AS INTERVAL)),
    (CAST('2 hours' AS INTERVAL)))
  AS durations (duration);
