crates/pgls_pretty_print/tests/snapshots/multi/tests__partition_aggregate_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/partition_aggregate.sql
snapshot_kind: text
---
SET enable_partitionwise_aggregate = 'true';

SET enable_partitionwise_join = 'true';

SET max_parallel_workers_per_gather = 0;

SET enable_incremental_sort = off;

CREATE TABLE pagg_tab
(a INT, b INT, c TEXT, d INT)
PARTITION BY LIST(c);

CREATE TABLE pagg_tab_p1
PARTITION OF pagg_tab
FOR VALUES IN ('0000',
'0001',
'0002',
'0003',
'0004');

CREATE TABLE pagg_tab_p2
PARTITION OF pagg_tab
FOR VALUES IN ('0005',
'0006',
'0007',
'0008');

CREATE TABLE pagg_tab_p3
PARTITION OF pagg_tab
FOR VALUES IN ('0009',
'0010',
'0011');

INSERT INTO pagg_tab
SELECT
  i % 20,
  i % 30,
  to_char(i % 12, 'FM0000'),
  i % 30
FROM
  generate_series(0, 2999) AS i;

ANALYZE pagg_tab;

SELECT
  c,
  SUM(a),
  AVG(b),
  COUNT(*),
  MIN(a),
  MAX(b)
FROM
  pagg_tab
GROUP BY c
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  c,
  SUM(a),
  AVG(b),
  COUNT(*),
  MIN(a),
  MAX(b)
FROM
  pagg_tab
GROUP BY c
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(b),
  COUNT(*),
  MIN(a),
  MAX(b)
FROM
  pagg_tab
GROUP BY a
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(b),
  COUNT(*),
  MIN(a),
  MAX(b)
FROM
  pagg_tab
GROUP BY a
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT a, c, COUNT(*) FROM pagg_tab GROUP BY a, c;

SELECT a, c, COUNT(*) FROM pagg_tab GROUP BY c, a;

SELECT c, a, COUNT(*) FROM pagg_tab GROUP BY a, c;

SELECT c, SUM(a) FROM pagg_tab WHERE 1 = 2 GROUP BY c;

SELECT c, SUM(a) FROM pagg_tab WHERE 1 = 2 GROUP BY c;

SELECT c, SUM(a) FROM pagg_tab WHERE c = 'x' GROUP BY c;

SELECT c, SUM(a) FROM pagg_tab WHERE c = 'x' GROUP BY c;

SET enable_hashagg = 'false';

SELECT
  c,
  SUM(a),
  AVG(b),
  COUNT(*)
FROM
  pagg_tab
GROUP BY 1
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  c,
  SUM(a),
  AVG(b),
  COUNT(*)
FROM
  pagg_tab
GROUP BY 1
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(b),
  COUNT(*)
FROM
  pagg_tab
GROUP BY 1
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(b),
  COUNT(*)
FROM
  pagg_tab
GROUP BY 1
HAVING
  AVG(d) < 15
ORDER BY 1,
  2,
  3;

SELECT c FROM pagg_tab GROUP BY c ORDER BY 1;

SELECT c FROM pagg_tab GROUP BY c ORDER BY 1;

SELECT a FROM pagg_tab WHERE a < 3 GROUP BY a ORDER BY 1;

SELECT a FROM pagg_tab WHERE a < 3 GROUP BY a ORDER BY 1;

RESET enable_hashagg;

SELECT
  c,
  SUM(a)
FROM
  pagg_tab
GROUP BY ROLLUP (c)
ORDER BY 1,
  2;

SELECT
  c,
  SUM(b ORDER BY a)
FROM
  pagg_tab
GROUP BY c
ORDER BY 1,
  2;

SELECT
  a,
  SUM(b ORDER BY a)
FROM
  pagg_tab
GROUP BY a
ORDER BY 1,
  2;

CREATE TABLE pagg_tab1
(x INT, y INT)
PARTITION BY RANGE(x);

CREATE TABLE pagg_tab1_p1
PARTITION OF pagg_tab1
FOR VALUES FROM (0) TO (10);

CREATE TABLE pagg_tab1_p2
PARTITION OF pagg_tab1
FOR VALUES FROM (10) TO (20);

CREATE TABLE pagg_tab1_p3
PARTITION OF pagg_tab1
FOR VALUES FROM (20) TO (30);

CREATE TABLE pagg_tab2
(x INT, y INT)
PARTITION BY RANGE(y);

CREATE TABLE pagg_tab2_p1
PARTITION OF pagg_tab2
FOR VALUES FROM (0) TO (10);

CREATE TABLE pagg_tab2_p2
PARTITION OF pagg_tab2
FOR VALUES FROM (10) TO (20);

CREATE TABLE pagg_tab2_p3
PARTITION OF pagg_tab2
FOR VALUES FROM (20) TO (30);

INSERT INTO pagg_tab1
SELECT
  i % 30,
  i % 20
FROM
  generate_series(0, 299, 2)
  AS i;

INSERT INTO pagg_tab2
SELECT
  i % 20,
  i % 30
FROM
  generate_series(0, 299, 3)
  AS i;

ANALYZE pagg_tab1;

ANALYZE pagg_tab2;

SELECT
  t1.x,
  SUM(t1.y),
  COUNT(*)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.x
ORDER BY 1,
  2,
  3;

SELECT
  t1.x,
  SUM(t1.y),
  COUNT(*)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.x
ORDER BY 1,
  2,
  3;

SELECT
  t1.x,
  SUM(t1.y),
  COUNT(t1)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.x
ORDER BY 1,
  2,
  3;

SELECT
  t1.x,
  SUM(t1.y),
  COUNT(t1)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.x
ORDER BY 1,
  2,
  3;

SELECT
  t2.y,
  SUM(t1.y),
  COUNT(*)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t2.y
ORDER BY 1,
  2,
  3;

SET enable_hashagg = 'false';

SELECT
  t1.y,
  SUM(t1.x),
  COUNT(*)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.y
HAVING
  AVG(t1.x) > 10
ORDER BY 1,
  2,
  3;

SELECT
  t1.y,
  SUM(t1.x),
  COUNT(*)
FROM
  pagg_tab1 AS t1,
  pagg_tab2 AS t2
WHERE
  t1.x = t2.y
GROUP BY t1.y
HAVING
  AVG(t1.x) > 10
ORDER BY 1,
  2,
  3;

RESET enable_hashagg;

SELECT
  b.y,
  SUM(a.y)
FROM
  pagg_tab1 AS a
  LEFT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY b.y
ORDER BY 1 NULLS LAST;

SELECT
  b.y,
  SUM(a.y)
FROM
  pagg_tab1 AS a
  LEFT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY b.y
ORDER BY 1 NULLS LAST;

SELECT
  b.y,
  SUM(a.y)
FROM
  pagg_tab1 AS a
  RIGHT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY b.y
ORDER BY 1 NULLS LAST;

SELECT
  b.y,
  SUM(a.y)
FROM
  pagg_tab1 AS a
  RIGHT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY b.y
ORDER BY 1 NULLS LAST;

SELECT
  a.x,
  SUM(b.x)
FROM
  pagg_tab1 AS a
  FULL OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY a.x
ORDER BY 1 NULLS LAST;

SELECT
  a.x,
  SUM(b.x)
FROM
  pagg_tab1 AS a
  FULL OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY a.x
ORDER BY 1 NULLS LAST;

SELECT
  a.x,
  b.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x < 20)
  AS a
  LEFT OUTER JOIN
    (SELECT
      *
    FROM
      pagg_tab2
    WHERE
      y > 10)
    AS b
  ON a.x = b.y
WHERE
  a.x > 5 OR b.y < 20
GROUP BY a.x,
  b.y
ORDER BY 1,
  2;

SELECT
  a.x,
  b.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x < 20)
  AS a
  LEFT OUTER JOIN
    (SELECT
      *
    FROM
      pagg_tab2
    WHERE
      y > 10)
    AS b
  ON a.x = b.y
WHERE
  a.x > 5 OR b.y < 20
GROUP BY a.x,
  b.y
ORDER BY 1,
  2;

SELECT
  a.x,
  b.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x < 20)
  AS a
  FULL OUTER JOIN
    (SELECT
      *
    FROM
      pagg_tab2
    WHERE
      y > 10)
    AS b
  ON a.x = b.y
WHERE
  a.x > 5 OR b.y < 20
GROUP BY a.x,
  b.y
ORDER BY 1,
  2;

SELECT
  a.x,
  b.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x < 20)
  AS a
  FULL OUTER JOIN
    (SELECT
      *
    FROM
      pagg_tab2
    WHERE
      y > 10)
    AS b
  ON a.x = b.y
WHERE
  a.x > 5 OR b.y < 20
GROUP BY a.x,
  b.y
ORDER BY 1,
  2;

SELECT
  a.x,
  a.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x = 1 AND x = 2)
  AS a
  LEFT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY a.x,
  a.y
ORDER BY 1,
  2;

SELECT
  a.x,
  a.y,
  COUNT(*)
FROM
  (SELECT
    *
  FROM
    pagg_tab1
  WHERE
    x = 1 AND x = 2)
  AS a
  LEFT OUTER JOIN
    pagg_tab2 AS b
  ON a.x = b.y
GROUP BY a.x,
  a.y
ORDER BY 1,
  2;

CREATE TABLE pagg_tab_m
(a INT, b INT, c INT)
PARTITION BY RANGE(a,
((a + b) / 2));

CREATE TABLE pagg_tab_m_p1
PARTITION OF pagg_tab_m
FOR VALUES FROM (0,
0) TO (12,
12);

CREATE TABLE pagg_tab_m_p2
PARTITION OF pagg_tab_m
FOR VALUES FROM (12,
12) TO (22,
22);

CREATE TABLE pagg_tab_m_p3
PARTITION OF pagg_tab_m
FOR VALUES FROM (22,
22) TO (30,
30);

INSERT INTO pagg_tab_m
SELECT
  i % 30,
  i % 40,
  i % 50
FROM
  generate_series(0, 2999) AS i;

ANALYZE pagg_tab_m;

SELECT
  a,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY a
HAVING
  AVG(c) < 22
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY a
HAVING
  AVG(c) < 22
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY a,
  (a + b) / 2
HAVING
  SUM(b) < 50
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY a,
  (a + b) / 2
HAVING
  SUM(b) < 50
ORDER BY 1,
  2,
  3;

SELECT
  a,
  c,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY (a + b) / 2,
  2,
  1
HAVING
  SUM(b) = 50 AND AVG(c) > 25
ORDER BY 1,
  2,
  3;

SELECT
  a,
  c,
  SUM(b),
  AVG(c),
  COUNT(*)
FROM
  pagg_tab_m
GROUP BY (a + b) / 2,
  2,
  1
HAVING
  SUM(b) = 50 AND AVG(c) > 25
ORDER BY 1,
  2,
  3;

CREATE TABLE pagg_tab_ml
(a INT, b INT, c TEXT)
PARTITION BY RANGE(a);

CREATE TABLE pagg_tab_ml_p1
PARTITION OF pagg_tab_ml
FOR VALUES FROM (0) TO (12);

CREATE TABLE pagg_tab_ml_p2
PARTITION OF pagg_tab_ml
FOR VALUES FROM (12) TO (20)
PARTITION BY LIST(c);

CREATE TABLE pagg_tab_ml_p2_s1
PARTITION OF pagg_tab_ml_p2
FOR VALUES IN ('0000',
'0001',
'0002');

CREATE TABLE pagg_tab_ml_p2_s2
PARTITION OF pagg_tab_ml_p2
FOR VALUES IN ('0003');

CREATE TABLE pagg_tab_ml_p3
(b INT, c TEXT, a INT)
PARTITION BY RANGE(b);

CREATE TABLE pagg_tab_ml_p3_s1 (c TEXT, a INT, b INT);

CREATE TABLE pagg_tab_ml_p3_s2
PARTITION OF pagg_tab_ml_p3
FOR VALUES FROM (7) TO (10);

ALTER TABLE pagg_tab_ml_p3
  ATTACH PARTITION
  pagg_tab_ml_p3_s1
  FOR VALUES FROM (0) TO (7);

ALTER TABLE pagg_tab_ml
  ATTACH PARTITION
  pagg_tab_ml_p3
  FOR VALUES FROM (20) TO (30);

INSERT INTO pagg_tab_ml
SELECT
  i % 30,
  i % 10,
  to_char(i % 4, 'FM0000')
FROM
  generate_series(0, 29999) AS i;

ANALYZE pagg_tab_ml;

SET max_parallel_workers_per_gather = 2;

SET parallel_setup_cost = 0;

SELECT
  a,
  SUM(b),
  array_agg(DISTINCT c),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  array_agg(DISTINCT c),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  array_agg(DISTINCT c),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3;

RESET parallel_setup_cost;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  b,
  SUM(a),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY b
ORDER BY 1,
  2,
  3;

SELECT
  b,
  SUM(a),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY b
HAVING
  AVG(a) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a,
  b,
  c
HAVING
  AVG(b) > 7
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a,
  b,
  c
HAVING
  AVG(b) > 7
ORDER BY 1,
  2,
  3;

SET min_parallel_table_scan_size = '8kB';

SET parallel_setup_cost = 0;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a
HAVING
  AVG(b) < 3
ORDER BY 1,
  2,
  3;

SELECT
  b,
  SUM(a),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY b
ORDER BY 1,
  2,
  3;

SELECT
  b,
  SUM(a),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY b
HAVING
  AVG(a) < 15
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a,
  b,
  c
HAVING
  AVG(b) > 7
ORDER BY 1,
  2,
  3;

SELECT
  a,
  SUM(b),
  COUNT(*)
FROM
  pagg_tab_ml
GROUP BY a,
  b,
  c
HAVING
  AVG(b) > 7
ORDER BY 1,
  2,
  3;

SET parallel_setup_cost = 10;

CREATE TABLE pagg_tab_para
(x INT, y INT)
PARTITION BY RANGE(x);

CREATE TABLE pagg_tab_para_p1
PARTITION OF pagg_tab_para
FOR VALUES FROM (0) TO (12);

CREATE TABLE pagg_tab_para_p2
PARTITION OF pagg_tab_para
FOR VALUES FROM (12) TO (22);

CREATE TABLE pagg_tab_para_p3
PARTITION OF pagg_tab_para
FOR VALUES FROM (22) TO (30);

INSERT INTO pagg_tab_para
SELECT
  i % 30,
  i % 20
FROM
  generate_series(0, 29999) AS i;

ANALYZE pagg_tab_para;

SELECT
  x,
  SUM(y),
  AVG(y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

SELECT
  x,
  SUM(y),
  AVG(y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

SELECT
  y,
  SUM(x),
  AVG(x),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY y
HAVING
  AVG(x) < 12
ORDER BY 1,
  2,
  3;

SELECT
  y,
  SUM(x),
  AVG(x),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY y
HAVING
  AVG(x) < 12
ORDER BY 1,
  2,
  3;

ALTER TABLE pagg_tab_para_p1
  SET (parallel_workers = 0);

ALTER TABLE pagg_tab_para_p3
  SET (parallel_workers = 0);

ANALYZE pagg_tab_para;

SELECT
  x,
  SUM(y),
  AVG(y),
  SUM(x + y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

SELECT
  x,
  SUM(y),
  AVG(y),
  SUM(x + y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

ALTER TABLE pagg_tab_para_p2
  SET (parallel_workers = 0);

ANALYZE pagg_tab_para;

SELECT
  x,
  SUM(y),
  AVG(y),
  SUM(x + y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

SELECT
  x,
  SUM(y),
  AVG(y),
  SUM(x + y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

RESET min_parallel_table_scan_size;

RESET parallel_setup_cost;

SELECT
  x,
  SUM(y),
  AVG(y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;

SELECT
  x,
  SUM(y),
  AVG(y),
  COUNT(*)
FROM
  pagg_tab_para
GROUP BY x
HAVING
  AVG(y) < 7
ORDER BY 1,
  2,
  3;
